AP-19682: Clean up `ExplorerURLStreamHandler` logic
AP-19682 (WorkflowContextV2 Aftercare)